ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /books/v1(/|$)(.*)
        backend:
          service:
            name: books-service
            port:
              number: 8090
      - pathType: Prefix
        path: /bookstore/v1(/|$)(.*)
        backend:
          service:
            name: bookstore-service
            port:
              number: 8090
